# delete_old_google_cal_events

./: .gitignore  .pre-commit-config.yaml  README.md  example.env  main.py  pyproject.toml  quickstart.py
